// The public API of our service
syntax = "proto3";

package com.example;

// tag::service[]
import "akkaserverless/annotations.proto";

message Request {
  string counter_id = 1;
}

message Result {
  int32 value = 1;
}

service DelegatingService {
  option (akkaserverless.service) = {
    type : SERVICE_TYPE_ACTION
  };

  rpc AddAndReturn(Request) returns (Result);
}
// end::service[]
